docs(java-basic): rewrite 24 files with in-depth bytecode+JVM perspective
Content rewrite following the rename commit. Combined with previous rename commit, git log --follow can now trace history across the rename boundary cleanly.